    (Tim Starling)
  . Fixed bug GH-9361 (Segmentation fault on script exit #9379). (cmb,
    Christian Schneider)

- DOM:
  . Fixed bug #79451 (DOMDocument->replaceChild on doctype causes double free).
    (Nathan Freeman)

- FPM:
  . Fixed bug GH-8885 (FPM access.log with stderr begins to write logs to
    error_log after daemon reload). (Dmitry Menshikov)

- Streams:
  . Fixed bug GH-9316 ($http_response_header is wrong for long status line).
    (cmb, timwolla)

01 Sep 2022, PHP 8.0.23

- Core:
  . Fixed incorrect double to long casting in latest clang. (zeriyoshi)

- DBA:
  . Fixed LMDB driver memory leak on DB creation failure (Girgias)
  . Fixed bug GH-9155 (dba_open("non-existing", "c-", "flatfile") segfaults).
    (cmb)

- Intl:
  . Fixed IntlDateFormatter::formatObject() parameter type. (Gert de Pagter)

- OPcache:
  . Fixed bug GH-9033 (Loading blacklist file can fail due to negative length).
    (cmb)

- OpenSSL:
  . Fixed bug GH-9339 (OpenSSL oid_file path check warning contains
    uninitialized path). (Jakub Zelenka)

- PDO_SQLite:
  . Fixed bug GH-9032 (SQLite3 authorizer crashes on NULL values). (cmb)

- SQLite3:
  . Fixed bug GH-9032 (SQLite3 authorizer crashes on NULL values). (cmb)

- Standard:
  . Fixed bug GH-9017 (php_stream_sock_open_from_socket could return NULL).
    (Heiko Weber)

- Streams:
  . Fixed bug GH-8472 (The resource returned by stream_socket_accept may have
    incorrect metadata). (Jakub Zelenka)
  . Fixed bug GH-8409 (SSL handshake timeout leaves persistent connections
    hanging). (Jakub Zelenka, Twosee)

04 Aug 2022, PHP 8.0.22

- CLI:
  . Fixed potential overflow for the builtin server via the PHP_CLI_SERVER_WORKERS
    environment variable. (yiyuaner)

- Core:
  . Fixed bug GH-8923 (error_log on Windows can hold the file write lock). (cmb)
  . Fixed bug GH-8995 (WeakMap object reference offset causing TypeError).
    (Tobias Bachert)

- Date:
  . Fixed bug #80047 (DatePeriod doesn't warn with custom DateTimeImmutable).